[package]
name = "web-cardz-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "*"
env_logger = "0.10.0"
actix-web-actors = "4.2.0"
actix = "0.13.1"
log = "0.4.20"
rand = "0.8.5"

